LendInvest Test/force-app/main/default/objects/TwilioSMS__c/fields/AccountSID__c.field-meta.xml
<CustomField>
    <fullName>AccountSID__c</fullName>
    <label>AccountSID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>