LendInvest Test/force-app/main/default/objects/TwilioSMS__c/fields/FromNumber__c.field-meta.xml
<CustomField>
    <fullName>FromNumber__c</fullName>
    <description>Twilio Number used in telecommunications</description>
    <inlineHelpText>Twilio Number used in telecommunications</inlineHelpText>
    <label>FromNumber</label>
    <type>Phone</type>
</CustomField>