LendInvest Test/force-app/main/default/objects/TwilioSMS__c/fields/GoldAlertNumber__c.field-meta.xml
<CustomField>
    <fullName>GoldAlertNumber__c</fullName>
    <description>Number to receive new GOLD Account Alerts</description>
    <inlineHelpText>Number to receive new GOLD Account Alerts</inlineHelpText>
    <label>GoldAlertNumber</label>
    <type>Phone</type>
</CustomField>